--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,7 @@
             "args": [
                 "-g",
                 "${file}",
+                "${workspaceFolder}/bin/dataLogger.o",
                 "-o",
                 "${workspaceFolder}/bin/${fileBasenameNoExtension}" 
             ],
