--- a/Hoochamacallit/makefile/makefile
+++ b/Hoochamacallit/makefile/makefile
@@ -8,3 +8,8 @@ default:
 	cp  ../DR/bin/* ../Common/bin
 	cp  ../DC/bin/* ../Common/bin
 	cp  ../DX/bin/* ../Common/bin
+clean:
+	$(MAKE) -C ../DR/makefile clean
+	$(MAKE) -C ../DC/makefile clean
+	$(MAKE) -C ../DX/makefile clean
+	rm ../Common/bin/*
